--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,49 +1,87 @@
+.bgTop {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 400px;
+  height: 550px;
+  background-image: url("/eucalyptus.png");
+  background-position: top right;
+  background-size: 135%;
+  background-repeat: no-repeat;
+}
+
+.bgBottom {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 380px;
+  height: 305px;
+  background-image: url("/eucalyptus.png");
+  background-position: bottom left;
+  background-size: 135%;
+  background-repeat: no-repeat;
+  margin-top: -250px;
+}
+
 .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 120px 50px 80px;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
+.logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
   position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 1.8rem;
+  max-width: 900px;
+  padding: 2rem;
+  margin: 0 auto;
+}
+
+.footer1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: right;
+  font-size: 1.8rem;
+  max-width: 900px;
+  margin: 100px 100px 0 auto;
+}
+
+.footer2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: right;
+  font-size: 1.8rem;
+  max-width: 900px;
+  margin: 0 100px 0 auto;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
+  /* grid-template-columns: repeat(4, minmax(25%, auto));
   max-width: 100%;
-  width: var(--max-width);
+  width: var(--max-width); */
+
+  grid-template-columns: 50% 50%;
+  grid-row: auto auto;
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 
 .card {
@@ -66,47 +104,12 @@
 
 .card p {
   margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
+  opacity: 0.8;
+  font-size: 1rem;
   line-height: 1.5;
-  max-width: 30ch;
+  max-width: 20ch;
 }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -127,8 +130,35 @@
 
 /* Mobile */
 @media (max-width: 700px) {
-  .content {
-    padding: 4rem;
+  .bgTop {
+    width: 230px;
+    height: 350px;
+  }
+
+  .bgBottom {
+    width: 250px;
+    height: 350px;
+    margin-top: -300px;
+  }
+
+  .main {
+    padding: 100px 20px;
+  }
+
+  .footer1 {
+    margin: 0 0 0 auto;
+    text-align: right;
+  }
+
+  .footer2 {
+    margin: 0 0 0 auto;
+    text-align: right;
+  }
+
+  .description {
+    font-size: 1.4rem;
+    padding: 20px;
+    margin: 60px 0;
   }
 
   .grid {
@@ -139,66 +169,19 @@
   }
 
   .card {
-    padding: 1rem 2.5rem;
+    padding: 20px;
   }
 
   .card h2 {
-    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
   }
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
+  .card p {
+    margin: 0;
+    opacity: 0.8;
+    font-size: 1rem;
+    line-height: 1.5;
+    max-width: 20ch;
   }
 }
 
@@ -206,24 +189,5 @@
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
   }
 }
